Dono de pousada cria check-in do cliente

--- a/config/locales/reservation-pt-br.yml
+++ b/config/locales/reservation-pt-br.yml
@@ -2,6 +2,7 @@ pt-BR:
   pending: 'Pendente'
   confirmed: 'Confirmada'
   canceled: 'Cancelada'
+  active: 'Ativa'
   activerecord:
     models:
       reservation: Reserva
