Checkout do cliente finalizado

--- a/config/locales/reservation-pt-br.yml
+++ b/config/locales/reservation-pt-br.yml
@@ -3,6 +3,7 @@ pt-BR:
   confirmed: 'Confirmada'
   canceled: 'Cancelada'
   active: 'Ativa'
+  closed: 'Finalizada'
   activerecord:
     models:
       reservation: Reserva
